--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -8,7 +8,7 @@
 
 
 
-<table class="table align-middle my-5 bg-white">
+<table class="table align-middle my-5 bg-white table-striped">
   <thead class="bg-light">
     <tr class="p-5">
       <th><div class="mx-5">Category Name</div></th>
