--- a/app/views/admin/users/new.html.erb
+++ b/app/views/admin/users/new.html.erb
@@ -1,12 +1,28 @@
-<%= form_for([:admin, @user]) do |f| %>
-  <div class="field">
-     <%= f.label :name %><br />
-    <%= f.text_area :name %>
-    <%= f.label :email %><br />
-    <%= f.email_field :email %>
-  </div>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <div class="card mt-5">
+        <div class="card-body p-4">
+          <!-- Your logo here -->
+          
 
-  <div class="actions">
-    <%= f.submit 'Create User' %>
+          <h2 class="text-center mb-4">Sign Up Users/Bakers</h2>
+
+          <%= form_for([:admin, @user]) do |f| %>
+            <div class="mb-3">
+              <%= f.text_field :name, class: 'form-control', placeholder: 'Enter your name' %>
+            </div>
+
+            <div class="mb-3">
+              <%= f.email_field :email, class: 'form-control', placeholder: 'Enter your email address' %>
+            </div>
+
+            <div class="d-grid">
+              <%= f.submit 'SignUp', class: 'btn btn-primary btn-lg' %>
+            </div>
+          <% end %>
+        </div>
+      </div>
+    </div>
   </div>
-<% end %>
+</div>
