--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,24 +1,49 @@
-<% @products.each do |product| %>
-    <div class="container">
-        <div class="row d-flex justify-content-center mt-4 ">
-            <div class="col-4 mt-4">
-                
-                <div class="card text-center shadow  mb-5 bg-body-tertiary rounded">
-                    <div class="card-body">
-                      <h5 class="card-title">
-                        <%= link_to product.name,product_path(product) %>
-                       
-                    </div>
-                   
-                    <div class="card-footer text-muted">
-                       <small>Created <%=time_ago_in_words(product.created_at)%> ago</small>
-                    </div>
-
-                </div>
-                
-            </div>
-            
+<div class="container-fluid my-4">
+    <div class="row">
+      <!-- Filters Section -->
+    <div class="col-md-3">
+  <h5>Filters</h5>
+  <%= form_with(url: products_path, method: :get, local: true) do %>
+    <!-- Category Filter -->
+      <div class="mb-3">
+          <label for="category" class="form-label">Category</label>
+          <%= select_tag 'category', options_for_select([['All', 'all']] + @categories.pluck(:name, :id), selected: params[:category]), class: "form-select" %>
         </div>
-        
+
+    <!-- Veg/Non-Veg Filter -->
+     <div class="mb-3">
+          <label for="type" class="form-label">Type</label>
+          <%= select_tag 'type', options_for_select([['All', 'all'], ['Vegetarian', 'veg'], ['Non-Vegetarian', 'non-veg']], selected: params[:type]), class: "form-select" %>
+        </div>
+
+    <!-- Price Range -->
+    <div class="mb-3">
+      <label for="price_range" class="form-label">Price Range (Up to $)</label>
+      <%= number_field_tag 'price_range', params[:price_range], class: "form-control", step: 1, min: 0, max: 50 %>
     </div>
-<% end %>
+
+    <%= submit_tag 'Apply Filters', class: "btn btn-primary w-100" %>
+  <% end %>
+</div>
+
+<!-- Products Section -->
+    <div class="col-md-9">
+    <div class="row">
+        <% @products.each do |product| %>
+        <div class="col-md-4 mb-4">
+           <a href="<%= product_path(product) %>" class="text-decoration-none text-dark">
+                <div class="card h-100">
+                    <%= image_tag product.images.first, class: "card-img-top", alt: product.name %>
+                    <div class="card-body d-flex justify-content-between align-items-center">
+                        <h5 class="card-title mb-0"><%= product.name %></h5>
+                        <p class="card-text mb-0">$<%= product.unit_price %></p>
+                    </div>
+                </div>
+            </a>
+        </div>
+        <% end %>
+    </div>
+    </div>
+
+    </div>
+  </div>
