--- a/app/views/order_mailer/new_order_email.html.erb
+++ b/app/views/order_mailer/new_order_email.html.erb
@@ -20,6 +20,6 @@
       <% end %>
     </ul>
 
-    <p>We will notify you once your order is shipped.</p>
+    <p>We are Preparing the order.Collect the same in the store after 2 hrs.</p>
   </body>
 </html>
