--- a/app/views/admin/contact_us_requests/index.html.erb
+++ b/app/views/admin/contact_us_requests/index.html.erb
@@ -42,9 +42,11 @@
                 </div>
             </td>
             <td>
+            <% if current_user&.is_admin? %>
             <a href="<%= admin_contact_us_request_path(request) %>" data-turbo-method="delete" data-turbo-confirm="Are you sure?" class="btn btn-primary rounded-pill">
                 Delete
             </a>
+            <%end%>
                  
              <!-- Button trigger modal -->
           <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#messageModal-<%= request.id %>">
