--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -12,6 +12,7 @@
     <%= form_with(url: admin_products_path, method: :get, local: true, class: "form-inline") do |form| %>
       <div class="input-group">
         <%= form.select :category_id, options_for_select([["All Categories", ""]] + @categories.map { |c| [c.name, c.id] }, @category_id), {}, class: "form-control" %>
+         <%= form.submit "Filter", class: "btn btn-primary me-1" %>
       </div>
     <% end %>
   </div>
@@ -28,9 +29,6 @@
 </div>
 
 
-
-
-
 <table class="table align-middle my-5 bg-white table-striped">
   <thead class="bg-light">
     <tr class="p-5">
@@ -39,8 +37,9 @@
       <th><div class="mx-3">Created Date</div></th>
       <th><div class="mx-3">Category</div></th>
       <th><div class="mx-1">Stock Quantity</div></th>
+      <th><div class="mx-1">Status</div></th>
       <th><div class="mx-1">Unit Price</div></th>
-       <th><div class="mx-1">Veg/Non Veg</div></th>
+       
       <th><div class="mx-3">Actions</div></th>
     </tr>
   </thead>
@@ -75,7 +74,7 @@
             </td>
             <td>
                 <div class="ms-3">
-                    <%= product.category.name %>
+                   <%= product.category.present? ? product.category.name : "No Category" %>
                 </div>
             </td>
              <td>
@@ -87,30 +86,37 @@
                     <% end %>
                 </div>
             </td>
+            <td>
+              <div class="ms-3">
+                <% if product.active %>
+                 <i class="bi bi-check-circle-fill text-success me-2"></i>
+                <% else %>
+                <i class="bi bi-x-circle-fill text-danger me-2"></i>
+                <% end %>
+                </div>
+            </td>
              <td>
                 <div class="ms-3">
                     <p class="fw-lead mb-1"><%= number_to_currency(product.unit_price) %></p>
                 </div>
             </td>
-            <td>
-             <div class="ms-3">
-                <% if product.is_vegetarian %>
-                <i class="bi bi-check-circle-fill text-success me-2"></i>
-                <% else %>
-                <i class="bi bi-x-circle-fill text-danger me-2"></i>
-                <% end %>
-             </div>
-            </td>
+            
             <td>
              <div class="d-flex ">
-                <%= link_to admin_product_path(product), class: "btn btn-link text-success me-2" do %>
-                <i class="bi bi-eye-fill"></i>
-                <% end %>
+                
                 <%= link_to edit_admin_product_path(product), class: "btn btn-link custom-btn" do %>
                 <i class="bi bi-pencil-fill"></i>
                 <% end %>
-                <%= link_to admin_product_path(product), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-link text-danger" do %>
-                <i class="bi bi-trash-fill"></i>
+                <%= link_to admin_product_path(product), 
+                    method: :delete, 
+                    data: { 
+                      turbo_method: :delete, 
+                      turbo_confirm: 'Are you sure you want to delete this product?'
+                    },
+                    class: "btn btn-link text-danger",
+                    disabled: product.orders.any?,
+                    title: product.orders.any? ? "Cannot delete: Product is present in orders" : "Delete product" do %>
+                  <i class="bi bi-trash-fill"></i>
                 <% end %>
                 </div>
             
@@ -120,3 +126,6 @@
    <% end %> 
   </tbody>
 </table>
+<div class="flickr_pagination">
+    <%= will_paginate @products, :container => false %>
+</div>
