--- a/app/views/home/aboutus.html.erb
+++ b/app/views/home/aboutus.html.erb
@@ -1,15 +1,36 @@
 <section class="py-5">
-	<div class="container">
-		<div class="row gx-4 align-items-center justify-content-between">
-			<div class="col-md-5 order-2 order-md-1">
-				<div class="mt-5 mt-md-0">
-					<span class="text-muted">Our Story</span>
-					<h2 class="display-5 fw-bold">About Us</h2>
-					<p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
-					<p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p><a class="btn btn-primary mt-2" href="#">Learn more</a>
-				</div>
-			</div>
-			<div class="col-md-5 order-1 order-md-2"><img class="img-fluid rounded-3" src="https://freefrontend.dev/assets/square.png"></div>
-		</div>
-	</div>
+	
+<div class="container">
+  <div class="row gx-4 align-items-center justify-content-between">
+    <div class="col-md-5 order-2 order-md-1">
+      <div class="mt-5 mt-md-0">
+        <span class="text-muted">Our Story</span>
+        <h2 class="display-5 fw-bold"><%= @content_management.about_us_header %></h2>
+        <p class="lead"><%= @content_management.about_us_story %></p>
+        
+      </div>
+    </div>
+    <div class="col-md-5 order-1 order-md-2">
+      <%= image_tag 'placeholder.jpg', class: 'img-fluid rounded-3' %>
+    </div>
+  </div>
+</div>
+
+<div class="container py-5">
+  <div class="row align-items-center">
+    <div class="col-md-6 text-center">
+      <%= image_tag @content_management.master_baker_image, alt: 'Baking', class: 'img-fluid' %>
+    </div>
+    <div class="col-md-6">
+         <span class="text-muted"><%= @content_management.master_baker_header %></span>
+      <h2 class="display-6 fw-bold">Meet Our Master Baker</h2>
+    
+      <p class="lead">
+        <%= @content_management.master_baker_description %>
+      </p>
+    </div>
+  </div>
+</div>
+
+
 </section>
