--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+  <%= javascript_include_tag 'https://code.jquery.com/jquery-3.6.0.min.js' %>
     <%= javascript_importmap_tags %>
   </head>
 
@@ -21,8 +22,7 @@
         </div>
         <div class="col-md-9 content">
           <div class="m-3">
-            <p class="notice"><%= notice %></p>
-            <p class="alert"><%= alert %></p>
+              <%=render 'layouts/flashmessages'%>
             <%= yield %>
           </div>
         </div>
@@ -32,11 +32,11 @@
         </div>
         <div class="col-12">
           <div class="py-3">
-            <p class="notice"><%= notice %></p>
-            <p class="alert"><%= alert %></p>
+              <%=render 'layouts/flashmessages'%>
             <%= yield %>
           </div>
         </div>
+          <%= render 'layouts/footer'%>
       <% end %>
     </div>
   </div>
