--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -33,7 +33,11 @@
         <div class="col-md-4 mb-4">
            <a href="<%= product_path(product) %>" class="text-decoration-none text-dark">
                 <div class="card h-100">
-                    <%= image_tag product.images.first, class: "card-img-top", alt: product.name %>
+                <% if product.images.attached? %>
+                  <%= image_tag product.images.first, class: "card-img-top", alt: product.name %>
+                <% else %>
+                  <%= image_tag "placeholder.jpg", class: "card-img-top", alt: "No Image Available" %>
+                <% end %>
                     <div class="card-body d-flex justify-content-between align-items-center">
                         <h5 class="card-title mb-0"><%= product.name %></h5>
                         <p class="card-text mb-0">$<%= product.unit_price %></p>
